// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organizations section index creates snapshot 1`] = `
<DocumentFragment>
  <main
    class="container d-flex flex-column flex-md-row justify-content-between my-md-4 p-0"
    role="main"
  >
    <div
      class="flex-grow-1 w-100"
    >
      <div>
        <div
          class="d-flex flex-row align-items-center justify-content-between pb-2 border-bottom"
        >
          <div
            class="h3 pb-0 title"
          >
            Organizations
          </div>
          <div>
            <button
              class="btn btn-secondary btn-sm text-uppercase btnAction"
              data-testid="addOrgButton"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center"
              >
                <svg
                  class="d-inline d-md-none"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
                <svg
                  class="d-none d-md-inline mr-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                  />
                </svg>
                <span
                  class="d-none d-md-inline"
                >
                  Add
                </span>
              </div>
            </button>
          </div>
        </div>
        <div
          class="position-absolute p-5 wrapper undefined"
        >
          <div
            class="d-flex flex-row align-items-center justify-content-center w-100 h-100"
          >
            <div
              class="spinner-border text-primary spinner undefined"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="modal modal"
        role="dialog"
      >
        <div
          class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
        >
          <div
            class="modal-content content modal"
          >
            <div
              class="modal-header d-flex flex-row align-items-center header"
            >
              <div
                class="h3 m-2 title"
              >
                Add organization
              </div>
              <button
                class="close"
                data-testid="closeModalBtn"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body p-4 h-100 d-flex flex-column"
            >
              <div
                class="alertWrapper"
                data-testid="alertWrapper"
              />
            </div>
            <div
              class="modal-footer p-3"
            >
              <button
                class="btn btn-secondary"
                type="button"
              >
                Add
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Organizations section index creates snapshot 2`] = `
<DocumentFragment>
  <main
    class="container d-flex flex-column flex-md-row justify-content-between my-md-4 p-0"
    role="main"
  >
    <div
      class="flex-grow-1 w-100"
    >
      <div>
        <div
          class="d-flex flex-row align-items-center justify-content-between pb-2 border-bottom"
        >
          <div
            class="h3 pb-0 title"
          >
            Organizations
          </div>
          <div>
            <button
              class="btn btn-secondary btn-sm text-uppercase btnAction"
              data-testid="addOrgButton"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center"
              >
                <svg
                  class="d-inline d-md-none"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
                <svg
                  class="d-none d-md-inline mr-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                  />
                </svg>
                <span
                  class="d-none d-md-inline"
                >
                  Add
                </span>
              </div>
            </button>
          </div>
        </div>
        <div
          class="list-group mt-4 mt-md-5"
        >
          <li
            class="list-group-item listItem"
            data-testid="organizationCard"
          >
            <div
              class="d-flex flex-row w-100 justify-content-between align-items-start"
            >
              <div
                class="d-flex flex-row align-items-center w-100"
              >
                <div
                  class="d-flex align-items-center justify-content-center p-1 overflow-hidden mr-2 imageWrapper imageWrapper"
                >
                  <svg
                    class="image"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
                    />
                  </svg>
                </div>
                <div
                  class="flex-grow-1 text-truncate"
                >
                  <div
                    class="h5 mb-0 text-truncate title"
                  >
                    Test
                  </div>
                </div>
                <div
                  class="ml-auto"
                >
                  <div
                    class="dropdown-menu dropdown-menu-right p-0 dropdownMenu"
                  >
                    <div
                      class="arrow arrow"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-3 text-truncate"
            >
              <small
                class="text-muted text-uppercase mr-1"
              >
                Homepage: 
              </small>
              <a
                class="link text-reset link"
                href="https://test.org"
                rel="noopener noreferrer"
                role="button"
                target="_blank"
              >
                https://test.org
              </a>
            </div>
            <div
              class="mt-2"
            >
              <p
                class="mb-0"
              >
                Lorem ipsum...
              </p>
            </div>
          </li>
          <li
            class="list-group-item listItem"
            data-testid="organizationCard"
          >
            <div
              class="d-flex flex-row w-100 justify-content-between align-items-start"
            >
              <div
                class="d-flex flex-row align-items-center w-100"
              >
                <div
                  class="d-flex align-items-center justify-content-center p-1 overflow-hidden mr-2 imageWrapper imageWrapper"
                >
                  <svg
                    class="image"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
                    />
                  </svg>
                </div>
                <div
                  class="flex-grow-1 text-truncate"
                >
                  <div
                    class="h5 mb-0 text-truncate title"
                  >
                    Helm
                  </div>
                </div>
                <div
                  class="ml-auto"
                >
                  <div
                    class="dropdown-menu dropdown-menu-right p-0 dropdownMenu"
                  >
                    <div
                      class="arrow arrow"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mt-3 text-truncate"
            >
              <small
                class="text-muted text-uppercase mr-1"
              >
                Homepage: 
              </small>
              <a
                class="link text-reset link"
                href="https://helm.sh"
                rel="noopener noreferrer"
                role="button"
                target="_blank"
              >
                https://helm.sh
              </a>
            </div>
            <div
              class="mt-2"
            >
              <p
                class="mb-0"
              >
                The package manager for Kubernetes
              </p>
            </div>
          </li>
        </div>
      </div>
    </div>
    <div>
      <div
        class="modal modal"
        role="dialog"
      >
        <div
          class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
        >
          <div
            class="modal-content content modal"
          >
            <div
              class="modal-header d-flex flex-row align-items-center header"
            >
              <div
                class="h3 m-2 title"
              >
                Add organization
              </div>
              <button
                class="close"
                data-testid="closeModalBtn"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body p-4 h-100 d-flex flex-column"
            >
              <div
                class="alertWrapper"
                data-testid="alertWrapper"
              />
            </div>
            <div
              class="modal-footer p-3"
            >
              <button
                class="btn btn-secondary"
                type="button"
              >
                Add
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
